sum_lst = {}

subdir('cast')
subdir('phasor')
subdir('detector')
subdir('beamformer')
subdir('channelizer')
subdir('polarizer')
subdir('guppi')
subdir('bfr5')

# TODO: Add Permutation module.
# TODO: Add Accumulate module.
# TODO: Add Copy module.

summary(sum_lst, section: 'Modules', bool_yn: true)
