test('beamformer-basic-ata', executable(
  'bl-beamformer-basic-ata', ['basic.cc', 'basic-ata.cc'],
  dependencies: libbl_dep,
))

test('beamformer-basic-meerkat', executable(
  'bl-beamformer-basic-meerkat', ['basic.cc', 'basic-meerkat.cc'],
  dependencies: libbl_dep,
))

test('beamformer-advanced', executable(
  'bl-beamformer-advanced', 'advanced.cc',
  dependencies: libbl_dep,
))
