test('beamformer-basic-ata', executable(
  'blade-beamformer-basic-ata', ['basic.cc', 'basic-ata.cc'],
  dependencies: lib_blade_dep,
))

test('beamformer-basic-meerkat', executable(
  'blade-beamformer-basic-meerkat', ['basic.cc', 'basic-meerkat.cc'],
  dependencies: lib_blade_dep,
))

test('beamformer-advanced-ata', executable(
  'blade-beamformer-advanced-ata', ['advanced.cc', 'advanced-ata.cc'],
  dependencies: lib_blade_dep,
))
